# llm-data-lab

./: .dockerignore  .gitignore  ANALYSIS_SUMMARY.txt  CHANGELOG_MIRRORS.md  CODE_AUDIT_REPORT.md  CONTRIBUTING.md  DEPLOY_BTCHURO.md  DEPLOY_CHECKLIST.md  DEPLOY_MIRRORS.md  DOCKER_DEPLOY.md  ENV_FIX_GUIDE.md  FINAL_DEPLOY_STEPS.md  FRONTEND_ANALYSIS_INDEX.md  FRONTEND_ARCHITECTURE_RECOMMENDATIONS.md  FRONTEND_ISSUES_QUICK_REFERENCE.md  FRONTEND_UX_UI_ANALYSIS.md  LICENSE  PROJECT_FIXES_SUMMARY.md  README.md  SERVER_SYNC_GUIDE.md  UPLOAD_GUIDE.md  deploy-server.sh  deploy.sh  design.md  diagnose.sh  docker-compose.cn.yml  docker-compose.prod.yml  docker-compose.yml  fix-env.sh  quick-fix.sh  setup-domain.sh
backend/: .dockerignore  .env.example  Dockerfile  config.py  database.py  main.py  pyproject.toml  schemas.py  security.py
backend/api/: auth.py  chat.py  dependencies.py  execution.py  files.py  history.py  llm.py  provider_settings.py
backend/llm_adapters/: anthropic_adapter.py  base.py  deepseek_adapter.py  factory.py  openai_adapter.py  qwen_adapter.py  siliconflow_adapter.py
backend/models/: __init__.py  chat.py  provider_credential.py  task.py  user.py
backend/sandbox/: runner.py
backend/services/: __init__.py  auth_service.py  chat_service.py  prompt_builder.py  provider_credentials_service.py  task_service.py
frontend/: .dockerignore  .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
notebooks/: README.md
prompts/: task_templates.yaml
(+20 files in other folders)
